--- a/app/views/registrations/_application.html.erb
+++ b/app/views/registrations/_application.html.erb
@@ -11,7 +11,7 @@
 <% progs.keys.each do |prog| %>
 <div class="row row-right">
 
-<h4 class="border-b">
+<h4>
    <%= link_to Country.find(prog).name,"#",{class: "collapse_all"} %>
 </h4>
   <% progs[prog].each do |i| %>
@@ -23,13 +23,11 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= i.id %>">
-         <%= i.institution.name %> 
-        </a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= i.id %>"><%= i.institution.name %></a>
         <small>
-           <span id="tag_reg_status_<%= i.id %>" class='tag-like green'> <%= i.application_status.name rescue "Unknown" %> </span>&nbsp;
-           <span class='tag-like blue'> <%= i.institution.type.name %> </span>&nbsp;
-           <span class='tag-like blue'> <%= i.institution.group.name rescue "No" %> Group </span>&nbsp;
+           <span id="tag_reg_status_<%= i.id %>" class="ml-10"><%= i.application_status.name rescue "Unknown" %></span>
+           <span class="ml-10"><%= i.institution.type.name %></span>
+           <span class="ml-10"'><%= i.institution.group.name rescue "No" %> Group</span>
            <br/>
            <br/>
            <small>
@@ -46,7 +44,7 @@
            </small>
         </small>
       </h4>
-      
+
     </div>
     <div id="collapse<%= i.id %>" class="panel-collapse collapse">
       <div class="panel-body">
@@ -58,16 +56,16 @@
                     Status
                     </span>
                     <span id="reg_status_<%= i.id %>">
-                    <%= i.application_status.name rescue "Unknown" %> 
+                    <%= i.application_status.name rescue "Unknown" %>
                     </span>
                     <small class="toggler clickable" onclick="regAppStatus(this,'#status_select_<%= i.id %>');" href="#">
            Change </small>
-                    
+
                     </h5>
                 </div>
                 <div class="border-b">
-                    <ul class="vlsdet">
-                      <h4 class="border-b">Application Details</h4>
+                    <ul class="vlsdet pt-0">
+                      <h4 class="bold-subhead">Application Details</h4>
                    <% s = ((Date.today >= i.start_date rescue 'start_date') ? ['start_date',99,'course started'] : ['start_date',98,'course yet to start']) %>
                    <% e = ((Date.today >= i.end_date rescue 'end_date') ? ['end_date',97,'course ended'] : ['end_date',98,'course yet to end']) %>
                         <% [['institution_name','institution_name'],
@@ -87,7 +85,7 @@
                         <small><%= link_to i.cby,i._cby %></small>
                         <small><%= i.created_at %></small>
                         </li>
-                        
+
                         <li>
                         <label  class="light">Last Modified</label>
                         <small><%= link_to i.uby, i._uby %></small>
@@ -95,15 +93,15 @@
                         </li>
                     </ul>
                 </div>
-                <h4 class="border-b">Notes <small><small>(Click to edit if it's your note)</small></small></h4>
+                <h4 class="bold-subhead mt-15">Notes <small><small>(Click to edit if it's your note)</small></small></h4>
                 <div id="programme_note_<%= i.id %>" >
                       <%= render 'notes/note', sub: @programme %>
                  </div>
             </div>
             <div class="col-xs-4 row-right pr-0">
                 <div class="well well-sm">
-                     <h4>Status Log</h4>
-                     <ul class="vlsdet-s">                      
+                     <h4 class="bold-subhead">Status Log</h4>
+                     <ul class="vlsdet-s pt-0">
                         <% items.take(4).each do |s| %>
                           <h5 class="border-b"><%= s.status_name %></h5>
                           <li>
@@ -115,7 +113,7 @@
                           <small><%= s.created_at %></small>
                           </li>
                         <% end %>
-                    </ul>                    
+                    </ul>
                 </div>
             </div>
         </div>
@@ -123,15 +121,17 @@
              <%= nested_form_for(i,remote: true) do |r| %>
               <%= r.fields_for :notes,i.notes.build do |n| %>
                 <%= n.hidden_field :sub_class, value: "Programme" %>
-                <%= n.text_area :content,{:size => '10x4', 
+                <%= n.text_area :content,{:size => '10x4',
                                           :style => 'width:480px;',
                                           class: "app_note",
                                           data: {provide: "markdown"}} %>
               <% end %>
               <br/>
-              <%= r.submit "Write",{class: "btn-sm btn-primary"} %>
+              <div class="form-group">
+                <%= r.submit "Write",{class: "btn btn-primary"} %>
+              </div>
               <% end %>
-     
+
       </div>
     </div>
   </div>
@@ -146,5 +146,5 @@
   $('.collapse_all').click(function(){
     $('.collapse').removeClass('in');
   });
-  
+
 </script>
