--- a/app/views/registrations/_basic.html.erb
+++ b/app/views/registrations/_basic.html.erb
@@ -1,16 +1,16 @@
 <!-- basic information about the registration -->
-<% a = @registration %>                               
+<% a = @registration %>
 <div class="row border-b">
   <div class="col-xs-3">
                 <%= image_tag((a.image? ? a.image_url : "/images/icons/user.png"),
                            {width: "170"}) %>
                         <span onclick = "showPopUp('upload_image');" class="abs-plus" style="display:none;">+</span>
 
-                        <div id="upload_image" class="addNewPop" style="display: none; top: 483px; left: 455px;"> 
+                        <div id="upload_image" class="addNewPop" style="display: none; top: 483px; left: 455px;">
                         <%= render 'shared/img_upload', a: a %>
                         </div>
     <ul class="vlsdet-s">
-        <h4 class="border-b">Quick Info</h4>
+        <h4 class="bold-subhead">Quick Info</h4>
            <%= li1('ref_no','ref_no','span','small',a)%>
            <%= li1('source',a.source,'span','small')%>
 
@@ -20,28 +20,27 @@
              <% out = meta(current_user.id,"registration",act,a.id,hsh[act.to_sym]) %>
              <%= li1(act,out,'span','small')%>
            <% end %>
-           
-
-           
     </ul>
-                        
+
   </div>
   <div class="col-xs-5 row-top">
-    <ul class="vlsdet">
-        <h4 class="border-b">Personal</h4>
+    <ul class="vlsdet pt-0 border-b">
+        <h4 class="row-top bold-subhead">Personal</h4>
         <% %w(first_name surname date_of_birth gender nationality).each do |v| %>
         <%= li1(v,v,'span','small',a)%>
         <% end %>
-        <h4 class="border-b">Contact</h4>
+    </ul>
+    <ul class="vlsdet">
+        <h4 class="bold-subhead">Contact</h4>
         <% %w(mobile1 mobile2 email1 email2 home_phone work_phone).each do |v| %>
         <%= li1(v,v,'span','small',a)%>
-        <% end %>    
+        <% end %>
     </ul>
   </div>
-  <div class="col-xs-4">    
+  <div class="col-xs-4">
     <div class="well well-sm form-last">
-        <h4>History</h4>
-        <ul class="vlsdet-s">
+        <h4 class="bold-subhead">History</h4>
+        <ul class="vlsdet-s pt-0">
            <%= li1('registered_at',a.created_at.to_date,'span','small')%>
            <%= li1('registered_by',a.cby,'span','small')%>
            <%= li1('Modified At',a.updated_at.to_date,'span','small')%>
@@ -49,41 +48,40 @@
            <% out = current_user.id == a.assigned_to ? [a.ato,1,'to me'] : a.ato %>
            <%= li1('assigned to',out,'span','small')%>
            <%= li1('assigned by',a.aby,'span','small')%>
-          
-    </ul>
+        </ul>
     </div>
   </div>
 </div>
-<div class="row border-b">
+<div class="row row-top border-b">
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="border-b">Address</h4>
+        <h4 class="bold-subhead">Address</h4>
         <% [['address_line1','line1'],
             ['address_line2','line2'],
             ['address_city','city'],
             ['a_country','country'],
             ['address_post_code','post_code']].each do |v| %>
           <%= li1(v[1],v[0],'span','small',a)%>
-        <% end %>   
+        <% end %>
     </ul>
   </div>
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="border-b">Passport & Visa</h4>
+        <h4 class="bold-subhead">Passport & Visa</h4>
         <% ['passport_number',
             'passport_valid_till',
             'visa_type',
             'visa_valid_till'].each do |v| %>
           <%= li1(v,v,'span','small',a)%>
-        <% end %>   
+        <% end %>
     </ul>
   </div>
 </div>
 
-<div class="row border-b">
+<div class="row row-top border-b">
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="border-b">Educational Background</h4>
+        <h4 class="bold-subhead">Educational Background</h4>
         <% [['qualification_name','qualification'],
             ['qua_subject','subject'],
             ['qua_institution','institution'],
@@ -91,51 +89,51 @@
             ['qua_exam','exam'],
             ['qua_score','score']].each do |v| %>
           <%= li1(v[1],v[0],'span','small',a)%>
-        <% end %>   
+        <% end %>
     </ul>
   </div>
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="border-b">English Language Proficiency</h4>
+        <h4 class="bold-subhead">English Language Proficiency</h4>
         <% a.exams.each do |x| %>
         <% [['english_level_name','english_level'],
             ['exam_type_name','exam_type'],
             ['exam_score','score'],
             ['exam_date','date']].each do |v| %>
           <%= li1(v[1],v[0],'span','small',x)%>
-        <% end %>   
+        <% end %>
         <% end %>
     </ul>
   </div>
 </div>
 
-<div class="row border-b">
+<div class="row row-top border-b">
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="border-b">Emergency Contact</h4>
+        <h4 class="bold-subhead">Emergency Contact</h4>
         <% [['emer_full_name','Full Name'],
             ['emer_relationship','Relationship'],
             ['emer_mobile','Mobile'],
             ['emer_email','Email']].each do |v| %>
           <%= li1(v[1],v[0],'span','small',a)%>
-        <% end %>   
+        <% end %>
     </ul>
   </div>
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="border-b">Flight Details</h4>
+        <h4 class="bold-subhead">Flight Details</h4>
         <% [['flight_no','flight_no'],
             ['flight_arrival_date','arrival_date'],
             ['flight_arrival_time','arrival_time'],
             ['flight_airport','airport']].each do |v| %>
           <%= li1(v[1],v[0],'span','small',a)%>
-        <% end %>   
+        <% end %>
     </ul>
   </div>
 </div>
-<br/>
+  <br/>
 <script>
-  $('.best_in_place').best_in_place();  
+  $('.best_in_place').best_in_place();
 </script>
 
 
