--- a/app/views/registrations/_finance.html.erb
+++ b/app/views/registrations/_finance.html.erb
@@ -1,7 +1,7 @@
 <!-- payment partial for a programme fora registration -->
 
 <% @obj.programmes.each do |i| %>
-  
+
   <% app_name = (i.institution.name rescue "Unknown") %>
   <% app_status = (i.application_status.name rescue "Unknown") %>
   <% eval_status = (app_status.downcase == "joined") %>
@@ -9,39 +9,37 @@
   <% fe_size = fe.nil? ? 0 : 1 %>
   <!-- how manieth registration is this for this institution is r_order -->
     <% r_order = r_order(i.registration.id,i.institution.id) rescue 1 %>
-    
+
 <div class="row row-right">
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= i.id %>">
-         <%= app_name %> 
-        </a>
-        <span class='tag-like green'> <%= app_status %> </span>&nbsp;
-        <span class='tag-like blue'><%= r_order.ordinalize %> student </span>&nbsp;
-        <% if eval_status %>  
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= i.id %>"><%= app_name %></a>
+        <small class="ml-10"><%= app_status %></small>
+        <small class="ml-10"><%= r_order.ordinalize %> student</small>
+        <% if eval_status %>
+        <small class="ml-10">
         <small>
-        <small>
-        
+
         <span class="mar0 glyphicon glyphicon-edit"></span>
-                    <%= link_to 'Edit', 
+                    <%= link_to 'Edit',
                                  edit_fee_path(fe),
                                  {remote: true,
                                   onclick: '$("div.row-top > h3").append("<img class=temp src=/images/icons/sload.gif >");'} %> |
                     <span class="mar0 glyphicon glyphicon-trash"></span>
-                          <%= link_to 'Delete', 
-                                        fe, 
-                                        method: :delete, 
+                          <%= link_to 'Delete',
+                                        fe,
+                                        method: :delete,
                                         data: { confirm: 'Are you sure?' }  %>
         </small>
         </small>
         <% end %>
       </h4>
     </div>
-  <% if eval_status %>  
+  <% if eval_status %>
     <% comms = fe.commissions rescue nil %>
-    
+
 
     <% if fe_size > 0 %>
       <div id="collapse<%= i.id %>" class="panel-collapse collapse in">
@@ -50,8 +48,7 @@
                 <div class="row row-top">
 
                     <div class="col-md-6">
-                    <h4 class="border-b">Fee Details</h4>
-                    <ul class="vlsdet-l border-b">
+                    <ul class="vlsdet-l border-b pt-0">
                     <li>
                       <label class="light">Currency</label>
                       <span><small><%= fe.currency %></small></span>
@@ -70,7 +67,7 @@
                     </li>
                     <li>
                       <label class="light">Commission Amount</label>
-                      
+
                       <b><%= humanized_money_with_symbol fe.commission_amount %></b>
                     </li>
                     <li>
@@ -91,25 +88,25 @@
 
                     <small>
 
-                    
+
                     </small>
                     </li>
                     </ul>
-                        <ul class="vlsdet">
+                        <ul class="vlsdet-l">
                                 <li>
                                 <label class="light">Created</label>
                                 <small><%= link_to i.cby,i._cby %></small>
                                 <small><%= i.created_at %></small>
                                 </li>
-                                
+
                                 <li>
                                 <label  class="light">Last Modified</label>
                                 <small><%= link_to i.uby, i._uby %></small>
                                 <small><%= i.updated_at %></small>
                                 </li>
-                        </ul>                        
+                        </ul>
                     </div>
-                    
+
             <% elsif fe_size == 0 %>
               <div class="row row-top row-right">
               <div class="col-md-6">
@@ -117,7 +114,7 @@
               </div>
               </div>
             <% end %>
-            
+
           <% end %>
             <% if !comms.blank? %>
               <div class="col-md-6 well">
@@ -127,15 +124,15 @@
                   <tr>
                                         <th>Currency</th>
                                         <th>Paid</th>
-                                        <th>Remaining</th>  
+                                        <th>Remaining</th>
                                         <th>Status</th>
                                         <th>&nbsp;</th>
-                                        
+
                   </tr>
                 </thead>
                 <tbody>
                   <% comms.each do |c| %>
-                            <tr> 
+                            <tr>
                                <td><%= c.currency %></td>
                                <td><%= humanized_money_with_symbol c.paid %></td>
                                <td><%= humanized_money_with_symbol c.remaining %></td>
@@ -149,15 +146,15 @@
                                <td class="<%= cl %>"><%= c.stat %></td>
                                <td>
                                    <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe,
-                                       c, 
-                                       method: :delete, 
+                                       c,
+                                       method: :delete,
                                        data: { confirm: 'Are you sure?',
                                        remote: true }  %>
                                </td>
                             </tr>
                   <% end %>
                 </tbody>
-             </table>    
+             </table>
              </div>
             <% end %>
          </div>
@@ -168,15 +165,12 @@
 </div>
 <% end %>
 
-
-
-
 <div class="row small">
 <i>* - If the application status is not "Joined", you cannot update the fees</i>
 </div>
 <br/>
 <!-- new payment on a create payment click-->
 <div id="resource-edit">
-  
+
 </div>
 
