--- a/app/views/institutions/_basic.html.erb
+++ b/app/views/institutions/_basic.html.erb
@@ -1,16 +1,16 @@
 <!-- basic information about the registration -->
-<% a = @institution %>                               
+<% a = @institution %>
 <div class="row border-b">
   <div class="col-xs-3">
                 <%= image_tag((a.image? ? a.image_url : "/images/icons/user.png"),
                            {width: "170"}) %>
                         <span onclick = "showPopUp('upload_image');" class="abs-plus" style="display:none;">+</span>
 
-                        <div id="upload_image" class="addNewPop" style="display: none; top: 483px; left: 455px;"> 
+                        <div id="upload_image" class="addNewPop" style="display: none; top: 483px; left: 455px;">
                         <%= render 'shared/img_upload', a: a %>
                         </div>
     <ul class="vlsdet-s">
-        <h4 class="border-b">Quick Info</h4>
+        <h4 class="bold-subhead">Quick Info</h4>
 
            <%= li1('people',[a.people.size,
                              a.my_peos(current_user.id).size,
@@ -27,49 +27,53 @@
              <% out = meta(current_user.id,"person",act,a.id,hsh[act.to_sym]) %>
              <%= li1(act,out,'span','small')%>
            <% end %>
-           
 
-           
+
+
     </ul>
-                        
+
   </div>
   <div class="col-xs-5 row-top">
-    <ul class="vlsdet">
-        <h4 class="border-b">About</h4>
+    <ul class="vlsdet pt-0 border-b">
+        <h4 class="pt-0 bold-subhead">About</h4>
         <%= li1('type',(a.type.name rescue "Unknown"),'span','small')%>
         <%= li1('group',(a.group.name rescue "Unknown"),'span','small')%>
-        <h4 class="border-b">Contact</h4>
+    </ul>
+    <ul class="vlsdet border-b">
+        <h4 class="bold-subhead">Contact</h4>
         <% %w(email phone fax website).each do |v| %>
         <%= li1(v,v,'span','small',a)%>
         <% end %>
-        <h4 class="border-b">Address</h4>
+    </ul>
+    <ul class="vlsdet">
+        <h4 class="bold-subhead">Address</h4>
         <% [['address_line1','line1'],
             ['address_line2','line2'],
             ['city_name','city'],
             ['country_name','country'],
             ['address_post_code','post_code']].each do |v| %>
           <%= li1(v[1],v[0],'span','small',a)%>
-        <% end %>   
+        <% end %>
     </ul>
   </div>
-  <div class="col-xs-4">    
+  <div class="col-xs-4">
     <div class="well well-sm form-last">
-        <h4>History</h4>
-        <ul class="vlsdet-s">
+        <h4 class="bold-subhead">History</h4>
+        <ul class="vlsdet-s pt-0">
            <%= li1('created_at',a.created_at,'span','small')%>
            <%= li1('created_by',a.cby,'span','small')%>
            <%= li1('Modified At',a.updated_at,'span','small')%>
            <%= li1('Modified By',a.uby,'span','small')%>
            <% out = current_user.id == a.assigned_to ? [a.ato,1,'to me'] : a.ato %>
            <%= li1('assigned to',out,'span','small')%>
-           <%= li1('assigned by',a.aby,'span','small')%>     
-        
- 
-          
+           <%= li1('assigned by',a.aby,'span','small')%>
+
+
+
     </ul>
     </div>
     <ul class="vlsdet-s">
-    <h4 class="border-b">Description</h4>
+    <h4 class="bold-subhead">Description</h4>
     <%= li1('description','desc','span','small',a)%>
     </ul>
   </div>
@@ -77,7 +81,7 @@
 
 <br/>
 <script>
-  $('.best_in_place').best_in_place();  
+  $('.best_in_place').best_in_place();
 </script>
 
 
